Changed web-api to web-client

--- a/AutoHub.WebClient/angular.json
+++ b/AutoHub.WebClient/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "AutoHub.WebApi": {
+    "AutoHub.WebClient": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:application": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/auto-hub.web-api",
+            "outputPath": "dist/auto-hub.web-client",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -68,10 +68,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "AutoHub.WebApi:build:production"
+              "browserTarget": "AutoHub.WebClient:build:production"
             },
             "development": {
-              "browserTarget": "AutoHub.WebApi:build:development"
+              "browserTarget": "AutoHub.WebClient:build:development"
             }
           },
           "defaultConfiguration": "development",
@@ -82,7 +82,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "AutoHub.WebApi:build"
+            "browserTarget": "AutoHub.WebClient:build"
           }
         },
         "test": {
@@ -105,5 +105,5 @@
       }
     }
   },
-  "defaultProject": "AutoHub.WebApi"
+  "defaultProject": "AutoHub.WebClient"
 }
