--- a/AutoHub.WebClient/package.json
+++ b/AutoHub.WebClient/package.json
@@ -16,13 +16,16 @@
     "@angular/compiler": "~13.3.0",
     "@angular/core": "~13.3.0",
     "@angular/forms": "~13.3.0",
+    "@angular/material": "^13.3.4",
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@vaadin/vaadin-core": "^23.0.6",
+    "jest-editor-support": "*",
     "rxjs": "~7.5.0",
+    "schematics-scss-migrate": "^1.3.14",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4",
-    "jest-editor-support": "*"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.3.3",
